# linux_apps_nx_video_api_test

./: README  README.md  project.config
src/: Android.mk  CodecInfo.cpp  DrmRender.cpp  Makefile.am  MediaExtractor.cpp  MediaExtractor.h  NX_V4l2Utils.cpp  NX_V4l2Utils.h  Util.cpp  Util.h  VideoDecTest.cpp  VideoEncTest.cpp  main.cpp
